--- a/.github/workflows/setup-marketing-content.yml
+++ b/.github/workflows/setup-marketing-content.yml
@@ -1,58 +1,28 @@
-name: Setup marketing-content structure
+name: Create Blogs Folder
 
 on:
   workflow_dispatch:
 
 jobs:
-  setup:
+  create-blogs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+      - uses: actions/checkout@v3
 
-      - name: Create folder structure inside marketing-content/
+      - name: Create blogs folder
         run: |
-          BASE="marketing-content"
-
-          # Clean old folders if they exist
-          rm -rf $BASE/blogs
-          rm -rf $BASE/blog
-          rm -rf $BASE/website/services
-          rm -rf $BASE/website/careers
-          rm -rf $BASE/website/case-studies
-
-          # Create new structure
-          mkdir -p $BASE/website/services
-          mkdir -p $BASE/website/careers
-          mkdir -p $BASE/website/case-studies
-          touch   $BASE/website/homepage-copy.md
-          touch   $BASE/website/about-us.md
-
-          mkdir -p $BASE/blogs/drafts
-          mkdir -p $BASE/blogs/published
-
-          mkdir -p $BASE/social/linkedin
-          mkdir -p $BASE/social/instagram
-          mkdir -p $BASE/social/twitter
-
-          mkdir -p $BASE/newsletters/talent
-          mkdir -p $BASE/newsletters/tech
-          mkdir -p $BASE/newsletters/impact
-
-          mkdir -p $BASE/collateral/capability-deck
-          mkdir -p $BASE/collateral/domain-one-pagers
-          touch   $BASE/collateral/ai-approach.md
-          touch   $BASE/collateral/maintenance-approach.md
-          touch   $BASE/collateral/sales-pitch-templates.md
-
-          # Create README
-          touch $BASE/README.md
+          mkdir -p blogs/drafts
+          mkdir -p blogs/published
+          echo "# Blogs" > blogs/README.md
+          echo "# Drafts" > blogs/drafts/README.md
+          echo "# Published" > blogs/published/README.md
 
       - name: Commit and push changes
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add .
-          git commit -m "Setup standardized marketing-content folder structure" || echo "No changes to commit"
+          git commit -m "Create blogs folder structure" || echo "No changes to commit"
           git push
