--- a/.github/workflows/blogs-test.yml
+++ b/.github/workflows/blogs-test.yml
@@ -1,25 +1,42 @@
-name: Test Blogs Folder
+name: Create Blogs Structure
 
 on:
   workflow_dispatch:
 
 jobs:
-  create-folders:
+  create-blogs:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Create blogs folder
+      # STEP 1 — create top-level folder only
+      - name: Create top-level blogs folder
         run: |
-          mkdir -p blogs/drafts
-          mkdir -p blogs/published
-          echo "Test" > blogs/README.md
+          mkdir -p blogs
+          echo "# Blogs" > blogs/README.md
 
-      - name: Commit and push
+      - name: Commit step 1
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add .
-          git commit -m "Create blogs folders"
+          git commit -m "Step 1: create top-level blogs folder" || echo "No changes"
+
+      # STEP 2 — create nested folders now that parent exists
+      - name: Create nested blog folders
+        run: |
+          mkdir -p blogs/drafts
+          mkdir -p blogs/published
+          echo "# Drafts" > blogs/drafts/README.md
+          echo "# Published" > blogs/published/README.md
+
+      - name: Commit step 2
+        run: |
+          git add .
+          git commit -m "Step 2: create nested blogs folders" || echo "No changes"
+
+      - name: Push changes
+        run: |
           git push
