--- a/.github/workflows/create-issues.yml
+++ b/.github/workflows/create-issues.yml
@@ -15,20 +15,15 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Read issues file
-        id: readfile
-        run: |
-          FILE="issues.md"
-          echo "content<<EOF" >> $GITHUB_OUTPUT
-          cat "$FILE" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-
-      - name: Create issues
+      - name: Create issues from markdown
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const content = `${{ steps.readfile.outputs.content }}`;
+            const fs = require('fs');
+
+            // Read issues.md safely (handles unicode, quotes, emojis)
+            const content = fs.readFileSync('issues.md', 'utf8');
             const lines = content.split("\n");
 
             let currentTitle = null;
@@ -54,7 +49,10 @@ jobs:
                 currentTitle = line.replace("## ", "").trim();
               } else if (line.startsWith("**Labels:**")) {
                 const labelText = line.replace("**Labels:**", "").trim();
-                currentLabels = labelText.split(",").map(l => l.trim());
+                currentLabels = labelText
+                  .split(",")
+                  .map(l => l.trim())
+                  .filter(Boolean);
               } else if (line.startsWith("---")) {
                 continue;
               } else {
@@ -63,9 +61,10 @@ jobs:
             }
             pushIssue();
 
-            console.log("Parsed issues:", issues.length);
+            console.log(`Parsed ${issues.length} issues`);
 
-            const existingIssues = await github.paginate(
+            // Fetch existing issues to avoid duplicates
+            const existingTitles = await github.paginate(
               github.rest.issues.listForRepo,
               {
                 owner: context.repo.owner,
@@ -75,20 +74,23 @@ jobs:
               }
             ).then(data => data.map(issue => issue.title));
 
-            console.log("Existing issue titles:", existingIssues);
+            console.log("Existing issues:", existingTitles.length);
 
             for (let issue of issues) {
-              if (existingIssues.includes(issue.title)) {
-                console.log("Skipping existing issue:", issue.title);
+              if (existingTitles.includes(issue.title)) {
+                console.log(`Skipping existing issue: ${issue.title}`);
                 continue;
               }
 
-              console.log("Creating issue:", issue.title);
+              console.log(`Creating issue: ${issue.title}`);
+
               await github.rest.issues.create({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 title: issue.title,
                 body: issue.body,
-                labels: issue.labels,
+                labels: issue.labels
               });
             }
+
+            console.log("Issue creation completed.");
